--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,14 @@
-
 * {
-    color: #ececec;
-    font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #ececec;
+  font-family: Roboto, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .app {
-    background-color: #212121;
-    display: flex;
+  background-color: #212121;
+  display: flex;
 }
